<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/checkBox_base32"
        android:layout_below="@+id/textView_addTokenHeader"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editText_secret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/checkBox_base32"
        android:layout_below="@+id/editText_name"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:selectAllOnFocus="true"
        android:text="@string/secret" />

    <CheckBox
        android:id="@+id/checkBox_base32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_secret"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/base32_encoded_secret" />

    <TextView
        android:id="@+id/textView_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox_base32"
        android:layout_below="@+id/checkBox_base32"
        android:layout_marginTop="13dp"
        android:layout_toStartOf="@+id/spinner_period"
        android:text="@string/type"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_type"
        android:layout_below="@+id/spinner_type"
        android:layout_marginTop="13dp"
        android:layout_toStartOf="@+id/spinner_period"
        android:text="@string/period"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_type"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button_addToken"
        android:layout_alignTop="@+id/textView_type"
        android:layout_marginStart="45dp" />

    <Spinner
        android:id="@+id/spinner_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_period"
        android:layout_alignEnd="@+id/spinner_type"
        android:layout_alignStart="@+id/spinner_type"
        android:layout_alignTop="@+id/textView_period" />

    <TextView
        android:id="@+id/textView_algorithm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_digits"
        android:layout_below="@+id/textView_digits"
        android:layout_marginTop="17dp"
        android:layout_toStartOf="@+id/spinner_algorithm"
        android:text="@string/algorithm"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_algorithm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_algorithm"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView_algorithm"
        android:layout_toEndOf="@+id/textView_period" />

    <TextView
        android:id="@+id/textView_addTokenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText_name"
        android:layout_marginTop="14dp"
        android:text="@string/enter_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_period"
        android:layout_below="@+id/textView_period"
        android:layout_marginTop="14dp"
        android:layout_toStartOf="@+id/spinner_digits"
        android:text="@string/digits"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_digits"
        android:layout_alignEnd="@+id/spinner_period"
        android:layout_alignStart="@+id/spinner_algorithm"
        android:layout_alignTop="@+id/textView_digits" />

    <CheckBox
        android:id="@+id/checkBox_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_pin"
        android:layout_above="@+id/textView_type"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp" />

    <CheckBox
        android:id="@+id/checkBox_2step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_algorithm"
        android:layout_below="@+id/textView_algorithm"
        android:layout_marginTop="31dp"
        android:text="@string/_2_step_rollout" />

    <Spinner
        android:id="@+id/spinner_phonepart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox_2step"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/checkBox_2step"
        android:layout_toEndOf="@+id/textView_algorithm" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/PIBLUE"
        android:fadingEdge="horizontal|vertical"
        android:text="ADD"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

</RelativeLayout>