<resources>
    <!--General-->
    <string name="app_name" translatable="false">privacyIDEA Authenticator</string>
    <string name="title_enter_details">Enter Details</string>

    <!--Strings for enter detail-->
    <string name="digits">Digits:</string>
    <string name="period">Period:</string>
    <string name="enter_details">Enter Details</string>
    <string name="algorithm">Algorithm:</string>
    <string name="base32_encoded_secret">Base32</string>
    <string name="hex_encoded_secret">Hexadecimal</string>
    <string name="title_radioGroup_encoding">Encoding of secret:</string>
    <string name="name" translatable="false">Name</string>
    <string name="secret">Secret</string>
    <string name="type">Type:</string>
    <string name="with_pin">With PIN</string>
    <string name="enterdetail_secret">Secret</string>

    <!--Strings for menu-->
    <string name="menu_copy_to_clipboard">Copy to clipboard</string>
    <string name="menu_add_manually">Add token manually</string>
    <string name="menu_about">About</string>
    <string name="actionmode_title">Choose an action</string>

    <!--Strings for dialogs-->
    <string name="confirm_deletion_title">Confirm Deletion</string>
    <string name="confirm_deletion_text">Do you really want to delete the token &lt;i>%s&lt;/i>?</string>
    <string name="edit_name_title">Edit Name</string>
    <string name="rename">Rename</string>
    <string name="item" translatable="false">Item</string>
    <string name="change_pin">Change PIN</string>
    <string name="tap_to_show_otp">Tap to show </string>
    <string name="tap_to_unlock">Tap to unlock</string>
    <string name="tap_to_set_pin">Tap to set PIN</string>
    <string name="enter_pin_title">Enter PIN</string>
    <string name="set_new_pin">Set new PIN</string>
    <string name="input_hint_new_pin">New PIN</string>
    <string name="input_hint_repeat_new_pin">Repeat new PIN</string>
    <string name="title_change_pin">Change PIN</string>
    <string name="device_not_supported">Android Device not supported</string>
    <string name="device_not_supported_text">This android device is not supported as it cannot store Tokens securely.</string>
    <string name="device_not_supported_btn_text">Close Application</string>
    <string name="firebase_config_broken_title">Firebase not set up correctly</string>
    <string name="firebase_config_broken">The Firebase configuration of the token seems to be broken.
                                            Please inform the responsible administrator about this issue.</string>

    <!--Strings for toasts-->
    <string name="toast_token_removed">Token removed</string>
    <string name="toast_deletion_cancelled">Deletion cancelled</string>
    <string name="toast_cancelled">Cancelled</string>
    <string name="toast_token_added_for">Token added for:</string>
    <string name="toast_invalid_qr">Invalid QR Code</string>
    <string name="toast_pin_not_correct">The PIN you have entered is not correct!</string>
    <string name="toast_empty_pin_input">Empty Input - Cancelled</string>
    <string name="toast_pin_set_isEmpty">New PIN cannot be empty!</string>
    <string name="toast_name_cantbe_empty">Name cannot be empty!</string>
    <string name="toast_secret_cantbe_empty">Secret cannot be empty!</string>
    <string name="toast_secret_nob32format">Secret is not in Base32 format!</string>
    <string name="toast_secret_nohexformat">Secret is not in hexadecimal format!</string>
    <string name="toast_edit_cancelled">Editing cancelled</string>
    <string name="toast_name_changed">Name was changed</string>
    <string name="toast_pins_dont_match">PINs do not match - Cancelled</string>
    <string name="toast_pin_changed">PIN was changed</string>
    <string name="toast_change_pin_cancelled">Changing PIN cancelled</string>
    <string name="toast_otp_to_clipboard">OTP copied to Clipboard</string>

    <!--Strings for buttons-->
    <string name="button_text_no">No</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_enter">Enter</string>
    <string name="button_text_plus" translatable="false">+</string>

    <!--Strings for about-->
    <string name="version" translatable="false">Version </string>
    <string name="piauth_name_label" translatable="false">privacyIDEA Authenticator</string>
    <string name="company_label" translatable="false">NetKnights GmbH 2017-2019</string>

    <!-- Strings for licenses-->
    <string name="licenses_label">Licenses </string>
    <string name="license_apache_20" translatable="false">Apache License 2.0</string>
    <string name="license_otpauth" translatable="false">OTP Authenticator</string>
    <string name="license_zxing_embed" translatable="false">ZXing Embedded</string>
    <string name="license_android_code_sample" translatable="false">Android Code Samples</string>

    <!--other-->
    <string name="textview" translatable="false">TextView</string>
    <string name="PushRolloutStep1Status">(1/3) Preparing registration data…</string>
    <string name="PushRolloutStep2Status">(2/3) Sending data to server…</string>
    <string name="PushRolloutStep3Status">(3/3) Processing data from server…</string>
    <string name="InitFirebaseStatus">Initializing Firebase…</string>
    <string name="Allow">Allow</string>
    <string name="Error">Error</string>
    <string name="ResponseNotParsed">The response could not be parsed.</string>
    <string name="ResponseNoKey">The response does not contain a key.</string>
    <string name="RegistrationTimeExpired">Registration time expired.</string>
    <string name="RolloutURLinvalid">Rollout URL is invalid.</string>
    <string name="RolloutURLNotResolved">Rollout URL cannot be resolved.</string>
    <string name="KeyFromServerWrongFormat">The key from the server was not in the correct format.</string>
    <string name="WaitWhileSecretIsGenerated">Please wait while the secret is generated.</string>
    <string name="IncompatiblePushVersion">Incompatible Version</string>
    <string name="IncompatiblePushVersionMessage">The requested rollout version is higher than the supported one on this phone!</string>
    <string name="TokenExpiredTitle">Token expired!</string>
    <string name="TokenAddedToast">Token added:</string>
    <string name="ServerResponseNotOk">Server does not allow the rollout.</string>
    <string name="AuthenticationSuccessful">Authentication successful!</string>
    <string name="AuthenticationFailed">Authentication failed!</string>
    <string name="PushtokenLabel">Pushtoken</string>
    <string name="RolloutButton">Rollout</string>
    <string name="PushtokenLabelRolloutUnfinished">Pushtoken - Rollout unfinished</string>
    <string name="AboutTitle">About the App</string>
    <string name="apache_license_2_0Label" translatable="false">Apache License 2.0</string>
    <string name="SSLHandshakeFailed">SSL Handshake failed.</string>
    <string name="PushtokenRollingOut">Rolling out…</string>
    <string name="ResetFirebaseInfoMsg">To reset Firebase, restart the App.</string>
    <string name="PushtokenRetryLabel">Retry rollout</string>
    <string name="PushtokenAuthenticating">Authenticating…</string>
    <string name="license_gson" translatable="false">Gson</string>
    <string name="license_firebase" translatable="false">Firebase</string>
    <string name="NotificationWithToken">With token</string>
    <string name="ERR_SERVER_UNREACHABLE">Server was unreachable.</string>
    <string name="retry_authentication">Retry Authentication</string>
    <string name="PushAuthInvalidSignature">Authentication signature is invalid. Try to authenticate again.</string>
    <string name="PushAuthSigningError">Authentication could not be signed. Try enrolling a new token.</string>
    <string name="Dismiss">Dismiss</string>
    <string name="TwoStepFinishDialogTitle">Smartphone part</string>
    <string name="ButtonOK">OK</string>

</resources>
